MDEV-28771 Assertion `table->in_use && tdc->flushed' failed after ALTER

Setting `table->s->tdc->flushed= 1` is unfortunately error-prone.
The three-way join made before ALTER TABLE remains tdc->ref_count equal 3.

Most likely, Monty's S3 fix at 2c8c15483 is also affected.

We lazily decrement ref_count, only when FLUSH is requested. In this case,
it represents a number of available cached TC instances, which are also
freed lazily, by a TDC_element::flush_unused call.

Calling flush_unused would be also incorrect.
If it will be called in parallel with following:
BEGIN
UPDATE t SET a = a+1;
// suppose flush_unused is done here
COMMIT

then it will release a share, though that transaction would still hold an
MDL lock. So it ends up with another SIGSEGV

More details on tdc->flushed:
In tc_release_table:
  if (table->needs_reopen() || table->s->tdc->flushed ||
      tc[i].records > tc_size)
  {
    tc[i].records--;
    mysql_mutex_unlock(&tc[i].LOCK_table_cache);
    tc_remove_table(table);
  }
This is called on table close. It releases only currently used table
instances, but not those two additional, used during 3-way join.

ref_count is incremented when new tdc is inserted in lf_hash, or when new
TC is acquired (which is also treated as a cache miss, see
tdc_acquire_share)

It is decremented mostly on FLUSH/REPAIR/etc, by a share->tdc->flush_unused
call, so it really represents a number of allocated TC elements. Anyway,
flush_unused call requires MDL_EXCLUSIVE to work properly.