sql/sql_table.cc
@@ -10447,7 +10447,7 @@ bool mysql_alter_table(THD *thd, const LEX_CSTRING *new_db,
       Table is a shared table. Remove the .frm file. Discovery will create
       a new one if needed.
     */
-    table->s->tdc->flushed= 1;         // Force close of all instances
+    table->s->tdc->flush_unused(true);         // Force close of all instances
     if (thd->mdl_context.upgrade_shared_lock(mdl_ticket, MDL_EXCLUSIVE,
                                              thd->variables.lock_wait_timeout))
       DBUG_RETURN(1);
@@ -12091,6 +12091,11 @@ copy_data_between_tables(THD *thd, TABLE *from, TABLE *to,
 #ifdef HAVE_REPLICATION
     if (online)
     {
+      if (from->s->online_alter_binlog)
+      {
+        DBUG_ASSERT(from->s->online_alter_binlog->error);
+        from->s->online_alter_binlog->cleanup();
+      }
       from->s->online_alter_binlog= new (&from->s->mem_root) Cache_flip_event_log();
       if (!from->s->online_alter_binlog)
         DBUG_RETURN(1);
@@ -12308,9 +12313,18 @@ copy_data_between_tables(THD *thd, TABLE *from, TABLE *to,
       error= online_alter_read_from_binlog(thd, &rgi, binlog);
     }
   }
-  else if (online) // error was on copy stage
+
+  if (online && error > 0) // error was on copy stage
   {
-    from->s->tdc->flushed= 1; // to free the binlog
+    /*
+       We can't free the resources properly now, as we can still be in
+       non-exclusive state. So this s->online_alter_binlog will hang
+       dangling until FLUSH TABLE or next ALTER ONLINE TABLE.
+       The commit code will just try to avoid to write into an error-marked
+       online_alter_binlog, but it's not critical to do so, as all the
+       resources are still allocated.
+     */
+    from->s->online_alter_binlog->error= true;
   }
 #endif
 
