sql/table.cc
@@ -7536,7 +7536,7 @@ void TABLE::mark_columns_needed_for_delete()
     need_signal= true;
   }
 #ifdef HAVE_REPLICATION
-  if (s->online_alter_binlog)
+  if (s->online_alter_binlog && !s->online_alter_binlog->error)
   {
     /*
       For online alter we have to read all columns, because we need PK columns
@@ -7634,7 +7634,7 @@ void TABLE::mark_columns_needed_for_update()
     need_signal= true;
   }
 #ifdef HAVE_REPLICATION
-  if (s->online_alter_binlog)
+  if (s->online_alter_binlog && !s->online_alter_binlog->error)
   {
     /*
       For online alter we have to read all columns, because we need PK columns
